--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Me gusta..</h1>
-    <p>Escuchar musica, platicar y salir con mis amigos, dormir y pasar tiempo con mi familia</p>
+    <p>Escuchar musica, platicar y salir con mis amigos, pasar tiempo con mi familia, ver peliculas y jugar juegos de mesa</p>
 </body>
 </html>
